Fix borkroman's animations not working I broke something, I fixed it

--- a/Resources/Prototypes/_c4llv07e/Aliens.yml
+++ b/Resources/Prototypes/_c4llv07e/Aliens.yml
@@ -853,7 +853,7 @@
   - type: Sprite
     sprite: /Textures/_c4llv07e/Mobs/Aliens/alien_egg/alien_egg_open.rsi
     layers:
-    - state: alienegg_open
+    - state: alienegg_opening
   - type: SpawnOnDespawn
     prototype: AlienEggOpenDecor
   - type: Timer
